--- a/src/@rocketseat/gatsby-theme-docs/text/index.mdx
+++ b/src/@rocketseat/gatsby-theme-docs/text/index.mdx
@@ -1,23 +1,6 @@
 # Introduction
 
-Rocket Docs is a complete and awesome Gatsby Theme for documentation websites. We've
-developed it to be easy to use and customize. Forget about other
-things and focus on what matters: **writing docs.**
+This demo site was put together using the Rocket Docs theme for Gatsby. It is not itself inherently 
+accessible, so don't necessarily look to it as an example of how to "correctly" code a site like this.
 
-## Features
-
-- ⚛️ Ready for Gatsby v3;
-- 📝 MDX for docs;
-- 🛣 Yaml-based sidebar navigation;
-- 📱 Responsive and mobile friendly;
-- 🖥 Code highlighting with [prism-react-renderer](https://github.com/FormidableLabs/prism-react-renderer) and [react-live](https://github.com/FormidableLabs/react-live) support;
-- 🥇 SEO (Sitemap, schema.org data, Open Graph and Twitter tags).
-- 📈 Google Analytics support;
-- 📄 Custom docs schema;
-- 🖱 Table of Contents;
-- ⚡️ Offline Support & WebApp Manifest;
-- and much more 🔥
-
-<br />
-
-[Get started now!](/getting-started)
+Note: given that this page is for screen reader demo purposes, not much time was spent on the styling.
