--- a/src/docs/resources.mdx
+++ b/src/docs/resources.mdx
@@ -15,7 +15,7 @@ title: Links and Resources
 
 | Description                | Command                   |
 | -------------------------- | ------------------------- |
-| Start Voiceover            | Comman-fn-F5              |
+| Start Voiceover            | Command-fn-F5              |
 | Start reading              | VO-A                      |
 | Increase/decrease speed    | VO-Command-shift-arrow    |
 | Open web rotor             | VO-U                      |
